--- a/lectures/Conditionals and Loops.ipynb
+++ b/lectures/Conditionals and Loops.ipynb
@@ -72,10 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6e054331",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 > 1\n"
+     ]
+    }
+   ],
    "source": [
     "## if statements\n",
     "## first write if, then the logical statement, then a colon (:)\n",
@@ -90,24 +98,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3e6a1e0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 3 (3019673104.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(\"3 > 1\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 3\n"
+     ]
+    }
+   ],
    "source": [
     "## Check - Whitespace is important!\n",
     "## What happens when you run this?\n",
-    "if 3 > 1:\n",
+    "if -1 > 1:\n",
     "print(\"3 > 1\")\n",
     "print(\"Apples are healthy!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "02b7fdbf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 > 1\n",
+      "2 < 3\n"
+     ]
+    }
+   ],
    "source": [
     "## You can put a conditional within a conditional\n",
     "## just make sure you indent properly\n",
@@ -130,22 +156,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "73c59f3a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## You code\n",
     "## put in a numeric value for x below\n",
-    "x = "
+    "x = -42"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d0c0b09a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is >2 and <100\n",
+      "x is >2 and <100\n"
+     ]
+    }
+   ],
    "source": [
     "## put each unique logical statement in parantheses\n",
     "if (x > 2) & (x < 100):\n",
@@ -170,14 +205,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f714d9bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|x| is >40\n"
+     ]
+    }
+   ],
    "source": [
     "## You code here\n",
     "## again remember to place unique logical statements in parantheses\n",
-    "## between them place | or or\n"
+    "## between them place | or or\n",
+    "\n",
+    "if (x>40) or (x<-40):\n",
+    "    print(\"|x| is >40\")"
    ]
   },
   {
@@ -194,10 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e4694d56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x > 2\n"
+     ]
+    }
+   ],
    "source": [
     "## start with an if\n",
     "if x > 2:\n",
@@ -221,10 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "48c50271",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-4 > x\n"
+     ]
+    }
+   ],
    "source": [
     "## start with an if\n",
     "if x > 2:\n",
@@ -243,21 +305,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a82524a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y is not divisible by 2\n"
+     ]
+    }
+   ],
    "source": [
     "## You code\n",
     "## % in python represents modular division\n",
     "## meaning a%b returns the remainder after a is divided by b\n",
     "## First set y as any integer you fancy\n",
-    "y = \n",
+    "y = 43\n",
     "\n",
     "## now write an if else statement that prints out if y\n",
     "## is or is not divisible by 2\n",
     "\n",
-    "\n"
+    "if y % 2 ==0:\n",
+    "    print(\"y is divisible by 2\")\n",
+    "else:\n",
+    "    print(\"y is not divisible by 2\")\n"
    ]
   },
   {
@@ -280,10 +353,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f8ca8722",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## you can input a number, n, and range will go from 0 to n-1\n",
     "## this will range from 0 to 9, i.e. 10 total numbers\n",
@@ -292,10 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5ffb2efc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(71, 142)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You can specify a start and stop like so, again at intervals of 1\n",
     "range(71, 142)"
@@ -303,10 +398,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4fff0aed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(71, 142, 3)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## you can also specify a spacing with a third \"step\" argument\n",
     "## this goes from 71 to 142 in steps of 3\n",
@@ -325,10 +431,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f8a42ad4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "all done\n"
+     ]
+    }
+   ],
    "source": [
     "## A for loop starts with the for statement,\n",
     "## i.e. for blank in iterable\n",
@@ -345,10 +469,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8f7f9fe4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "pear\n"
+     ]
+    }
+   ],
    "source": [
     "## You can loop through more than ranges\n",
     "## you can loop through any \"iterable\" object\n",
@@ -359,14 +493,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7f307824",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m## iterables are things like lists, tuples, and ranges\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m## See what happens when you try to loop through an integer\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m:\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "## iterables are things like lists, tuples, and ranges\n",
     "## See what happens when you try to loop through an integer\n",
-    "\n"
+    "for i in 5:\n",
+    "    print(i)\n"
    ]
   },
   {
@@ -386,10 +533,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "1567c255",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70]\n"
+     ]
+    }
+   ],
    "source": [
     "## Let's create a list of all the even numbers \n",
     "## from 1 to 71\n",
@@ -400,14 +555,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "cdc8dda6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 14, 21, 28, 35, 42, 49, 56, 63, 70, 77, 84, 91, 98, 105]\n"
+     ]
+    }
+   ],
    "source": [
     "## You code\n",
     "## create a list of all the numbers divisible by 7 from 1 to 111\n",
-    "## using a list comprehension\n"
+    "## using a list comprehension\n",
+    "div7_1_111 = [i for i in range(1,112) if i % 7 ==0]\n",
+    "\n",
+    "print(div7_1_111)"
    ]
   },
   {
@@ -430,10 +596,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "55fb153b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 is divisible by 7.\n",
+      "11 is divisible by 11.\n",
+      "14 is divisible by 7.\n",
+      "21 is divisible by 7.\n",
+      "22 is divisible by 11.\n",
+      "28 is divisible by 7.\n",
+      "33 is divisible by 11.\n",
+      "35 is divisible by 7.\n",
+      "42 is divisible by 7.\n",
+      "44 is divisible by 11.\n",
+      "49 is divisible by 7.\n",
+      "55 is divisible by 11.\n",
+      "56 is divisible by 7.\n",
+      "63 is divisible by 7.\n",
+      "66 is divisible by 11.\n",
+      "70 is divisible by 7.\n",
+      "77 is divisible by 7.\n",
+      "77 is divisible by 11.\n",
+      "84 is divisible by 7.\n",
+      "88 is divisible by 11.\n",
+      "91 is divisible by 7.\n",
+      "98 is divisible by 7.\n",
+      "99 is divisible by 11.\n"
+     ]
+    }
+   ],
    "source": [
     "## Let's print out all numbers that are\n",
     "## divisible by 7 or 11 between 1 and 100\n",
@@ -451,10 +647,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "09e4f95e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is not divisible by 7 or 11\n",
+      "2 is not divisible by 7 or 11\n",
+      "3 is not divisible by 7 or 11\n",
+      "4 is not divisible by 7 or 11\n",
+      "5 is not divisible by 7 or 11\n",
+      "6 is not divisible by 7 or 11\n",
+      "7 is divisible by 7.\n",
+      "7 is not divisible by 7 or 11\n",
+      "8 is not divisible by 7 or 11\n",
+      "9 is not divisible by 7 or 11\n",
+      "10 is not divisible by 7 or 11\n",
+      "11 is divisible by 11.\n",
+      "11 is not divisible by 7 or 11\n",
+      "12 is not divisible by 7 or 11\n",
+      "13 is not divisible by 7 or 11\n",
+      "14 is divisible by 7.\n",
+      "14 is not divisible by 7 or 11\n",
+      "15 is not divisible by 7 or 11\n",
+      "16 is not divisible by 7 or 11\n",
+      "17 is not divisible by 7 or 11\n",
+      "18 is not divisible by 7 or 11\n",
+      "19 is not divisible by 7 or 11\n",
+      "20 is not divisible by 7 or 11\n",
+      "21 is divisible by 7.\n",
+      "21 is not divisible by 7 or 11\n",
+      "22 is divisible by 11.\n",
+      "22 is not divisible by 7 or 11\n",
+      "23 is not divisible by 7 or 11\n",
+      "24 is not divisible by 7 or 11\n",
+      "25 is not divisible by 7 or 11\n",
+      "26 is not divisible by 7 or 11\n",
+      "27 is not divisible by 7 or 11\n",
+      "28 is divisible by 7.\n",
+      "28 is not divisible by 7 or 11\n",
+      "29 is not divisible by 7 or 11\n",
+      "30 is not divisible by 7 or 11\n",
+      "31 is not divisible by 7 or 11\n",
+      "32 is not divisible by 7 or 11\n",
+      "33 is divisible by 11.\n",
+      "33 is not divisible by 7 or 11\n",
+      "34 is not divisible by 7 or 11\n",
+      "35 is divisible by 7.\n",
+      "35 is not divisible by 7 or 11\n",
+      "36 is not divisible by 7 or 11\n",
+      "37 is not divisible by 7 or 11\n",
+      "38 is not divisible by 7 or 11\n",
+      "39 is not divisible by 7 or 11\n",
+      "40 is not divisible by 7 or 11\n",
+      "41 is not divisible by 7 or 11\n",
+      "42 is divisible by 7.\n",
+      "42 is not divisible by 7 or 11\n",
+      "43 is not divisible by 7 or 11\n",
+      "44 is divisible by 11.\n",
+      "44 is not divisible by 7 or 11\n",
+      "45 is not divisible by 7 or 11\n",
+      "46 is not divisible by 7 or 11\n",
+      "47 is not divisible by 7 or 11\n",
+      "48 is not divisible by 7 or 11\n",
+      "49 is divisible by 7.\n",
+      "49 is not divisible by 7 or 11\n",
+      "50 is not divisible by 7 or 11\n",
+      "51 is not divisible by 7 or 11\n",
+      "52 is not divisible by 7 or 11\n",
+      "53 is not divisible by 7 or 11\n",
+      "54 is not divisible by 7 or 11\n",
+      "55 is divisible by 11.\n",
+      "55 is not divisible by 7 or 11\n",
+      "56 is divisible by 7.\n",
+      "56 is not divisible by 7 or 11\n",
+      "57 is not divisible by 7 or 11\n",
+      "58 is not divisible by 7 or 11\n",
+      "59 is not divisible by 7 or 11\n",
+      "60 is not divisible by 7 or 11\n",
+      "61 is not divisible by 7 or 11\n",
+      "62 is not divisible by 7 or 11\n",
+      "63 is divisible by 7.\n",
+      "63 is not divisible by 7 or 11\n",
+      "64 is not divisible by 7 or 11\n",
+      "65 is not divisible by 7 or 11\n",
+      "66 is divisible by 11.\n",
+      "66 is not divisible by 7 or 11\n",
+      "67 is not divisible by 7 or 11\n",
+      "68 is not divisible by 7 or 11\n",
+      "69 is not divisible by 7 or 11\n",
+      "70 is divisible by 7.\n",
+      "70 is not divisible by 7 or 11\n",
+      "71 is not divisible by 7 or 11\n",
+      "72 is not divisible by 7 or 11\n",
+      "73 is not divisible by 7 or 11\n",
+      "74 is not divisible by 7 or 11\n",
+      "75 is not divisible by 7 or 11\n",
+      "76 is not divisible by 7 or 11\n",
+      "77 is divisible by 7.\n",
+      "77 is divisible by 11.\n",
+      "77 is divisible by 7 and 11\n",
+      "78 is not divisible by 7 or 11\n",
+      "79 is not divisible by 7 or 11\n",
+      "80 is not divisible by 7 or 11\n",
+      "81 is not divisible by 7 or 11\n",
+      "82 is not divisible by 7 or 11\n",
+      "83 is not divisible by 7 or 11\n",
+      "84 is divisible by 7.\n",
+      "84 is not divisible by 7 or 11\n",
+      "85 is not divisible by 7 or 11\n",
+      "86 is not divisible by 7 or 11\n",
+      "87 is not divisible by 7 or 11\n",
+      "88 is divisible by 11.\n",
+      "88 is not divisible by 7 or 11\n",
+      "89 is not divisible by 7 or 11\n",
+      "90 is not divisible by 7 or 11\n",
+      "91 is divisible by 7.\n",
+      "91 is not divisible by 7 or 11\n",
+      "92 is not divisible by 7 or 11\n",
+      "93 is not divisible by 7 or 11\n",
+      "94 is not divisible by 7 or 11\n",
+      "95 is not divisible by 7 or 11\n",
+      "96 is not divisible by 7 or 11\n",
+      "97 is not divisible by 7 or 11\n",
+      "98 is divisible by 7.\n",
+      "98 is not divisible by 7 or 11\n",
+      "99 is divisible by 11.\n",
+      "99 is not divisible by 7 or 11\n",
+      "100 is not divisible by 7 or 11\n"
+     ]
+    }
+   ],
    "source": [
     "## You code\n",
     "## write a better loop than what I had before\n",
@@ -463,7 +789,16 @@
     "## print \"i is divisible by 11\" if i is divisible by 11\n",
     "## print \"i is divisible by 7 and 11\" if i is divisible by both\n",
     "## print \"i not divisible by 7 or 11\" if i is divisible by neither\n",
-    "\n"
+    "\n",
+    "for i in range(1,101):\n",
+    "    if i%7 == 0:\n",
+    "        print(i,\"is divisible by 7.\")\n",
+    "    if i%11 == 0:\n",
+    "        print(i,\"is divisible by 11.\")\n",
+    "    if (i%7 == 0) & (i%11 == 0):\n",
+    "        print(i,\"is divisible by 7 and 11\")\n",
+    "    else:\n",
+    "        print(i,\"is not divisible by 7 or 11\")"
    ]
   },
   {
@@ -484,10 +819,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "8ccf271d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Countdown time!\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "Lift off!\n"
+     ]
+    }
+   ],
    "source": [
     "## First write while then the conditional statement and a colon\n",
     "## then indent and write the code chunk you want executed\n",
@@ -547,7 +901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
