--- a/practice-problems/Shallow and Deep Copies.ipynb
+++ b/practice-problems/Shallow and Deep Copies.ipynb
@@ -19,11 +19,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2bf29c83",
+   "metadata": {},
+   "source": [
+    "Both lists should coincide after changing b"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d1e72082",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 71, 5, 6]\n",
+      "[1, 2, 3, 71, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1,2,3,4,5,6]\n",
     "b = a\n",
@@ -43,22 +60,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "11430bc9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## code or write here\n"
+    "## code or write here\n",
+    "import copy\n",
+    "b=copy.copy(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "64ed0cfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 71, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "## code or write here\n"
+    "## code or write here\n",
+    "a=[1,2,3,4,5,6]\n",
+    "b[3]=71\n",
+    "print(a)\n",
+    "print(b)"
    ]
   },
   {
@@ -70,11 +102,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ce6949b",
+   "metadata": {},
+   "source": [
+    "Because it is a list of lists, shallow copy will not adequately create a brand new copy of a so changing b will change a too."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cff90124",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 71, 4], [5, 6, 7, 8]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = [[1, 2, 3, 4], \n",
     "     [5, 6, 7, 8]]\n",
@@ -95,13 +146,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5f6615f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4], [5, 6, 7, 8]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## code here\n",
-    "\n"
+    "\n",
+    "a = [[1, 2, 3, 4], \n",
+    "     [5, 6, 7, 8]]\n",
+    "\n",
+    "b = copy.deepcopy(a)\n",
+    "b[0][2] = 71\n",
+    "\n",
+    "a"
    ]
   },
   {
@@ -262,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
