--- a/practice-problems/jupyter notebooks.ipynb
+++ b/practice-problems/jupyter notebooks.ipynb
@@ -21,10 +21,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2+2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2. Create a `Markdown` block below this `Markdown` block and write a silly sentence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I am 32 and noob in python"
    ]
   },
   {
@@ -38,7 +54,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I am 32 and noob in python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "4. Click on the `Kernel` dropdown button above and select `Restart & Clear Output`. What happened to the code chunk you executed in 1. above?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Did not show the result or that it was ever executed."
    ]
   },
   {
@@ -56,6 +86,20 @@
     "4. Find out how to insert an image into a `Markdown` chunk. Practice with the file `cat_pic.JPG` in this folder. Is there a way to change the size of the displayed image?\n",
     "\n",
     "5. Hit the `+` button above, then tap your `l` key, what happens to the newly created `Code` block?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\Omega^2=p_{\\phi}^2$\n",
+    "# WdW equation\n",
+    "## WdW equation\n",
+    "### WdW equation\n",
+    "#### WdW equation\n",
+    "`\"this is a code\"`\n",
+    "\n",
+    "![alt text](cat_pic.JPG)"
    ]
   },
   {
@@ -93,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
